name:                processor-utils
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/processor-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Jordan E Medlock
maintainer:          jordanemedlock@gmail.com
copyright:           2017 Jordan E Medlock
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Processor.Utils
  build-depends:       base >= 4.7 && < 5
                     , allocated-processor
  default-language:    Haskell2010

executable processor-utils-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , processor-utils
  default-language:    Haskell2010

test-suite processor-utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , processor-utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/processor-utils
